# ukb_sleep_prediction

./: .gitignore  pyproject.toml
lib/: README.md  setup.cfg  setup.py
lib/nimrls/: __init__.py  cv.py  io.py  logging.py  ml.py
lib/nimrls/tests/: test_io.py  test_logging.py
src/: 10_compute_core_hours.py  11_do_mlconfounds_tests.py  12_plot_confounds_models.py  13_plot_graphical_abstract_results.py  1_extract_phenotypes.sh  2_extract_functional.yaml  3_predict.py  3_submit_predict.py  4_check_demographics.py  5_predict_confounds_baseline.py  5_submit_predict_confounds.py  6_plot.py  7_evaluate_validation.py  8_create_results_table.py  9_plot_best_models.py  X_create_results_table_pca.py  X_predict_pca.py  X_submit_predict_pca.py  run_in_venv.sh
src/phenotype_results/doze_day/: phenotype_doze_day_gset_cv_scores.csv  phenotype_doze_day_gset_fold_predictions.csv  phenotype_doze_day_gsrf_cv_scores.csv  phenotype_doze_day_gsrf_fold_predictions.csv  phenotype_doze_day_linearsvchc_cv_scores.csv  phenotype_doze_day_linearsvm_cv_scores.csv  phenotype_doze_day_logithc_cv_scores.csv  phenotype_doze_day_logithc_fold_predictions.csv
src/phenotype_results/morning_evening_person_extreme/: phenotype_morning_evening_person_extreme_gset_cv_scores.csv  phenotype_morning_evening_person_extreme_gset_fold_predictions.csv  phenotype_morning_evening_person_extreme_gsrf_cv_scores.csv  phenotype_morning_evening_person_extreme_gsrf_fold_predictions.csv  phenotype_morning_evening_person_extreme_linearsvchc_cv_scores.csv  phenotype_morning_evening_person_extreme_linearsvm_cv_scores.csv  phenotype_morning_evening_person_extreme_logithc_cv_scores.csv  phenotype_morning_evening_person_extreme_logithc_fold_predictions.csv
src/phenotype_results/morning_extreme/: phenotype_morning_extreme_gset_cv_scores.csv  phenotype_morning_extreme_gset_fold_predictions.csv  phenotype_morning_extreme_gsrf_cv_scores.csv  phenotype_morning_extreme_gsrf_fold_predictions.csv  phenotype_morning_extreme_linearsvchc_cv_scores.csv  phenotype_morning_extreme_linearsvm_cv_scores.csv  phenotype_morning_extreme_logithc_cv_scores.csv  phenotype_morning_extreme_logithc_fold_predictions.csv
src/phenotype_results/nap_day_extreme/: phenotype_nap_day_extreme_gset_cv_scores.csv  phenotype_nap_day_extreme_gset_fold_predictions.csv  phenotype_nap_day_extreme_gsrf_cv_scores.csv  phenotype_nap_day_extreme_gsrf_fold_predictions.csv  phenotype_nap_day_extreme_linearsvchc_cv_scores.csv  phenotype_nap_day_extreme_linearsvm_cv_scores.csv  phenotype_nap_day_extreme_logithc_cv_scores.csv  phenotype_nap_day_extreme_logithc_fold_predictions.csv
src/phenotype_results/pheno_extreme/: phenotype_pheno_extreme_gset_cv_scores.csv  phenotype_pheno_extreme_gset_fold_predictions.csv  phenotype_pheno_extreme_gsrf_cv_scores.csv  phenotype_pheno_extreme_gsrf_fold_predictions.csv  (+4 more)
src/results/: best_models.json  confounds_test.csv  core_hours.csv  results_table.csv  results_table_formatted.xlsx  results_validation_formatted.csv
src/results_confounds/: core_hours.csv  demographics_summary.csv
src/results_pca/: best_models.json  results_table.csv
(+339 files in other folders)
